<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="4dp"
    android:background="@color/windowBackground"
    android:orientation="vertical"
    android:visibility="visible">


    <TextView
        android:id="@+id/tv_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/row_news_source"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:textStyle="italic" />

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/sdv_urlImage"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/thumbnail_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:scaleType="fitCenter"
        fresco:placeholderImage="@drawable/error_placerholder" />

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/row_news_author"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:textStyle="normal|italic" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/row_news_title"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark_1"
        android:textSize="25sp"
        android:textStyle="normal|bold|italic" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/row_news_description"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="normal|italic" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:id="@+id/tv_published_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/row_news_publish"
        android:textAlignment="textEnd"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:textStyle="bold|italic" />

</LinearLayout>